[gd_scene load_steps=5 format=3 uid="uid://7uit8jvucaby"]

[ext_resource type="Script" path="res://gui/main_menu.gd" id="1_hy1hp"]
[ext_resource type="Texture2D" uid="uid://dhofcn6myy5on" path="res://picture/grey.png" id="2_rph7d"]
[ext_resource type="Theme" uid="uid://ecajw5bl35k8" path="res://theme/d_theme.tres" id="2_v5ppk"]
[ext_resource type="PackedScene" uid="uid://bbqx76q2sgvrq" path="res://save/saving_system.tscn" id="3_n6ysm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hy1hp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -408.0
offset_right = 512.0
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rph7d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -145.5
offset_right = 148.0
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_v5ppk")
theme_override_font_sizes/font_size = 90
text = "Game Title"
horizontal_alignment = 1

[node name="Play" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme = ExtResource("2_v5ppk")
text = "Play"

[node name="Setting" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
theme = ExtResource("2_v5ppk")
text = "Setting"

[node name="Archive" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
theme = ExtResource("2_v5ppk")
text = "Archive"

[node name="Credit" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
theme = ExtResource("2_v5ppk")
text = "Credit"

[node name="Quit" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Play")
theme = ExtResource("2_v5ppk")
text = "Exit"

[node name="SavingSystem" parent="." instance=ExtResource("3_n6ysm")]

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="VBoxContainer/Archive" to="." method="_on_archive_pressed"]
[connection signal="pressed" from="VBoxContainer/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
